fast/parser/document-write-noscript.html fails for threaded HTML parser https://bugs.webkit.org/show_bug.cgi?id=109237

Reviewed by Eric Seidel.

Source/WebCore:

If there are multiple calls to document.write in an external script, we
need to wait for them all to complete before invalidating the
speculative tokens. Instead of doing this when we unwind the
document.write call stack, we do this when we're about to resume
parsing after script execution.

Test: fast/parser/document-write-basic.html

* html/parser/HTMLDocumentParser.cpp:
(WebCore::HTMLDocumentParser::processParsedChunkFromBackgroundParser):
(WebCore::HTMLDocumentParser::insert):
(WebCore::HTMLDocumentParser::resumeParsingAfterScriptExecution):

LayoutTests:

This tests basic document.write functionality.  There doesn't appear to
be another fast/parser test that covers this basic case (although it's
convered in some more complicated test cases incidentally.)

* fast/parser/document-write-basic-expected.txt: Added.
* fast/parser/document-write-basic.html: Added.


Canonical link: https://commits.webkit.org/127444@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@142200 268f45cc-cd09-0410-ab3c-d52691b4dbfc